[package]
name = "ex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1"
anyhow = "1"
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1", features = ["derive"] }
rust_decimal = "1.26"
csv-async = { version = "1.1", features = ["tokio", "with_serde"] }
tokio-stream = "0"
assertor = "0"

[dev-dependencies]
rust_decimal_macros = "1.26"
